--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Pere the Analyst Portfolio<br />
 						</h1> 
-						<p>A Data Analyst well versed in SQL, Excel, Tableau with foundational knowledge in Python and R <a href=https://www.linkedin.com/in/pereazazi>@P.Azazi</a> 
+						<p>Senior Data Analyst | BI & AI/ML Expert | SQL, Tableau, Power BI, Python, DBT| 6+ Years Driving Actionable Insights<a href=https://www.linkedin.com/in/pereazazi>@P.Azazi</a> 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
